k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-police
  labels:
    name: smart-police
    environment: production
